# illume

./: .env  .gitignore  README.md  api.py  background.js  dockerfile  manifest.json  pyproject.toml  requirements.txt  youtube.py
data_pipelines/: api.py
examples/: runningPabloAI.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: index.html  manifest.json  quiz.html  sidepanel.html
frontend/src/: api_helpers.js  background.js  config.js  content.js
frontend/src/quiz/: MCQuestion.jsx  OEQuestion.jsx  Quiz.jsx  Quiz.module.css
frontend/src/sidepanel/: SidePanel.module.css  index.jsx
llm_engineering/app/: __init__.py  actions.py
llm_engineering/infrastructure/: __init__.py  cleanData.py  getData.py
llm_engineering/models/: __init__.py  botlz1.py  comfyui_client.py  download_models.py  gemini_client.py  mochi.py  mochi_client.py  operations.py
public/: manifest.json
scripts/: background.js  content.js  get_mochi.sh  parsing_answers.py  popup.js  quiz.js  sidepanel.js
src/: api_helpers.js  background.js  content.js  utils.js
src/quiz/: MCQuestion.jsx  OEQuestion.jsx  Quiz.jsx
src/sidepanel/: SidePanel.jsx
templates/: popup.html  quiz.html  sidepanel.html
tests/: a1.txt  format_test.py  formatted.txt  message.txt  q1.txt  test_create_answers.py  test_create_new_questions.py  test_create_questions.py  test_create_word_explanation.py  test_imports.py  test_modal_output.py  test_pabloAI.py
youtube_video_finder/: __init__.py  youtube_video_finder.py
youtube_video_finder/testing/: testing_yt.py
(+6 files in other folders)
